# cuda_hgemm

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  run_sample.sh
src/: cublas_tensor_op.cu  main.cu  simt_naive.cu
src/common/: common.h  cuda_timer.h  logging.h  matrix.h  ptx.h  tester.h  util.h
src/mma/: mma_async.cu  mma_async_pg2s.cu  mma_async_pg2s_ps2r.cu  mma_async_stage2.cu  mma_async_stage3.cu  mma_async_stage4.cu  mma_base.cu  mma_naive.cu  mma_permuted.cu
src/wmma/: wmma_async.cu  wmma_async_pg2s.cu  wmma_async_pg2s_ps2r.cu  wmma_async_stage2.cu  wmma_async_stage3.cu  wmma_base.cu  wmma_naive.cu  wmma_padding.cu
tools/performance/: performance.py  performance.sh
